// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`complex queries multiple string searches should not override $and 1`] = `
Object {
  "$and": Array [
    Object {
      "a": Object {
        "$eq": "1",
      },
    },
    Object {
      "b": Object {
        "$eq": "2",
      },
    },
  ],
}
`;

exports[`complex queries nested _and search 1`] = `
Object {
  "$and": Array [
    Object {
      "$and": Array [
        Object {
          "a": Object {
            "$eq": "1",
          },
        },
        Object {
          "$and": Array [
            Object {
              "b": Object {
                "$eq": "2",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`complex queries nested _not search 1`] = `
Object {
  "$nor": Array [
    Object {
      "$and": Array [
        Object {
          "a": Object {
            "$eq": "1",
          },
        },
      ],
      "$nor": Array [
        Object {
          "$and": Array [
            Object {
              "b": Object {
                "$eq": "2",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`complex queries nested _or search 1`] = `
Object {
  "$or": Array [
    Object {
      "$and": Array [
        Object {
          "a": Object {
            "$eq": "1",
          },
        },
      ],
      "$or": Array [
        Object {
          "$and": Array [
            Object {
              "b": Object {
                "$eq": "2",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`complex queries non-recursive _and search 1`] = `
Object {
  "$and": Array [
    Object {
      "$and": Array [
        Object {
          "a": Object {
            "$eq": "1",
          },
        },
      ],
    },
    Object {
      "$and": Array [
        Object {
          "b": Object {
            "$eq": "2",
          },
        },
      ],
    },
  ],
}
`;

exports[`complex queries non-recursive _not search 1`] = `
Object {
  "$nor": Array [
    Object {
      "$and": Array [
        Object {
          "a": Object {
            "$eq": "1",
          },
        },
      ],
    },
    Object {
      "$and": Array [
        Object {
          "b": Object {
            "$eq": "2",
          },
        },
      ],
    },
  ],
}
`;

exports[`complex queries non-recursive _or search 1`] = `
Object {
  "$or": Array [
    Object {
      "$and": Array [
        Object {
          "a": Object {
            "$eq": "1",
          },
        },
      ],
    },
    Object {
      "$and": Array [
        Object {
          "b": Object {
            "$eq": "2",
          },
        },
      ],
    },
  ],
}
`;

exports[`complex queries recursive _and search 1`] = `
Object {
  "$and": Array [
    Object {
      "$and": Array [
        Object {
          "a": Object {
            "$eq": "1",
          },
        },
      ],
    },
    Object {
      "$and": Array [
        Object {
          "b": Object {
            "$eq": "2",
          },
        },
      ],
    },
    Object {
      "$and": Array [
        Object {
          "$and": Array [
            Object {
              "a": Object {
                "$eq": "1",
              },
            },
          ],
        },
        Object {
          "$and": Array [
            Object {
              "b": Object {
                "$eq": "2",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`complex queries recursive _not search 1`] = `
Object {
  "$nor": Array [
    Object {
      "$and": Array [
        Object {
          "a": Object {
            "$eq": "1",
          },
        },
      ],
    },
    Object {
      "$and": Array [
        Object {
          "b": Object {
            "$eq": "2",
          },
        },
      ],
    },
    Object {
      "$nor": Array [
        Object {
          "$and": Array [
            Object {
              "a": Object {
                "$eq": "1",
              },
            },
          ],
        },
        Object {
          "$and": Array [
            Object {
              "b": Object {
                "$eq": "2",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`complex queries recursive _or search 1`] = `
Object {
  "$or": Array [
    Object {
      "$and": Array [
        Object {
          "a": Object {
            "$eq": "1",
          },
        },
      ],
    },
    Object {
      "$and": Array [
        Object {
          "b": Object {
            "$eq": "2",
          },
        },
      ],
    },
    Object {
      "$or": Array [
        Object {
          "$and": Array [
            Object {
              "a": Object {
                "$eq": "1",
              },
            },
          ],
        },
        Object {
          "$and": Array [
            Object {
              "b": Object {
                "$eq": "2",
              },
            },
          ],
        },
      ],
    },
  ],
}
`;

exports[`searchNumeric multiple conditions 1`] = `
Object {
  "a": Object {
    "$eq": 1,
    "$lt": 2,
  },
}
`;

exports[`searchNumeric single condition 1`] = `
Object {
  "a": Object {
    "$eq": 1,
  },
}
`;

exports[`searchString multiple conditions 1`] = `
Object {
  "$and": Array [
    Object {
      "a": Object {
        "$eq": "1",
      },
    },
    Object {
      "a": Object {
        "$options": "i",
        "$regex": "2",
      },
    },
  ],
}
`;

exports[`searchString single condition 1`] = `
Object {
  "$and": Array [
    Object {
      "a": Object {
        "$eq": "1",
      },
    },
  ],
}
`;
